--- a/css/common.css
+++ b/css/common.css
@@ -13,13 +13,15 @@ body{
         border-right: 0.5px solid #000000;
     }
 
+
     .mainColumn{
-        margin-left: 20%;
-        width: 80%;
+        margin-left: 120px;
+        width: 400px;
     }
 
+
     .titlefont{
-        margin-left:0%;
+        margin-left:0px;
         font-family: monospace;
         color: #131f42
     }
